feature/finalizing the architecture, added autoPing system, timeout and interval customization and default payload for pings. Handled most of the known error cases and added closing handshakes with corresponding status codes according to RFC doc (predefined status codes)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "/dist"
   ],
   "scripts": {
-    "test": "nodemon test.js"
+    "test": "tsc && node test.js"
   },
   "repository": {
     "type": "git",
